ros2_ws/log/build_2024-11-16_11-27-50/drone_home/stderr.log
  File "/home/pi/drone-home/ros2_ws/install/drone_home/lib/python3.12/site-packages/drone_home/gps_imu_publisher.py", line 137
    while
         ^
SyntaxError: invalid syntax

